# moptim

./: .clang-tidy  .clangd  CMakeLists.txt  README.md  todo.md
.devcontainer/: Dockerfile  devcontainer.json
cmake/: code-format.cmake
docker/: RTOptimTest.Dockerfile  build_rt_test.sh
include/: AnalyticalCost.hh  BaseCost.hh  Convergence.hh  Cost.hh  EigenSolver.hh  GaussNewton.hh  ICost.hh  IModel.hh  IOptimizer.hh  IOptmizer.hh  ISolver.hh  LevenbergMarquardt.hh  NumericalCost.hh  NumericalCost2.hh  NumericalCostCentral.hh  NumericalCostForwardEuler.hh  NumericalCostSycl.hh  Status.hh
include/old/: AnalyticalCost.hh
src/: AnalyticalCost.cc  Cost.cc  EigenSolver.cc  GaussNewton.cc  LevenbergMarquardt.cc  NumericalCost.cc  NumericalCost2.cc  NumericalCostCentral.cc  NumericalCostForwardEuler.cc  draft.cc
test/: CMakeLists.txt  models.hh  playground.cc  simple.cc  simple_point2.cc  test_2dtransform.cc  test_3dtransform.cc  test_cost.cc  test_cost2.cc  test_curve_fitting.cc  test_helper.cc  test_helper.hh  test_models.cc  test_models.hh  test_powell.cc  test_realtime.cc  test_rosenbrock.cc  test_simple_model.cc  test_transform2d.cc  transform2d.cc  transform2d.hh  transform3d.cc  transform3d.hh
test/data/: generate.hh  parser.hh  scan.txt
test/nist/: CMakeLists.txt  README.md  chwirut1.cc  kirby2.cc  nelson.cc
test/sycl/: bug_reduction.cc  test_sycl_cost.cc  test_sycl_jacobian.cc  test_sycl_matmult.cc  test_sycl_transform2d.cc  test_sycl_transform3d.cc
utils/: AsyncConsoleLogger.cc  AsyncConsoleLogger.hh  CMakeLists.txt  ConsoleLogger.cc  ConsoleLogger.hh  ILog.cc  ILog.hh  NullLogger.cc  NullLogger.hh  Timer.cc  Timer.hh
